@@ -1,3 +1,6 @@
+  02 Aug 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-ce-8.10.0_rc9.ebuild:
+  www-apps/gitlab-ce:  removed old RC version
+
 *gitlab-ce-8.10.2 (27 Jul 2016)
 
   27 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.2.ebuild:
